180 ==> 366391 - Rotating an image seems to forget to reset the orientation flag.
181 ==> 393654 - Not able to select gpx file.
182 ==> 367596 - Sub-folder count images but don't show them (unsupported JPEG file?).
183 ==> 379922 - Digikam won't remove tags set by Windows Explorer.
184 ==> 379081 - GPS data are in file but geolocation indicator is not shown and map view empty.
185 ==> 354819 - Specific pictures not showing up in digikam.
186 ==> 393855 - MySQL/MariaDB upgrade fails.
187 ==> 384603 - Camera Creation Date not set from EXIF data.
188 ==> 386959 - Properties view: wrong creation date [patch].
189 ==> 393970 - No mts video thumbnails.
190 ==> 393728 - Reread metadata from Video uses sidecar only.
191 ==> 393925 - UpdateSchemaFromV7ToV9 fails due to duplicate key in album_2.
192 ==> 393773 - showfoto crashes when geotagging.
193 ==> 388199 - No context menu to copy coordinates from map.
194 ==> 393399 - Windows defender freaks out in windows 10 and Edge.
195 ==> 392134 - SIGSEGV While Scanning Faces [patch].
196 ==> 394168 - OSM Search Yields No Results.
197 ==> 377719 - Cannot rename file with overwrite [patch].
198 ==> 388002 - remove kio related legacy [patch]
199 ==> 394242 - Import settings unneccesarily asks to overwrite image database, and crashes when I decline.
200 ==> 394278 - A slideshow theme for kiosk mode.
201 ==> 340389 - digiKam crashes while editing pictures for color balancing on OSX [patch].
202 ==> 394413 - Unify group handling [patch].
203 ==> 394573 - Revers geodata from open street map does not work.
204 ==> 394590 - Feature request: being able to filter on all metadatas fields.
205 ==> 394671 - Distortion on Panasonic DMC-LX15.
206 ==> 393205 - Advanced rename very slow.
207 ==> 382474 - Thumbnail regeneration.
208 ==> 394865 - digikam suspicious crash on exit.
209 ==> 390541 - Tooltip background cannot be changed.
210 ==> 391521 - "Tool-tip" box difficult to read due to default color scheme.
211 ==> 